--- a/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiGallery.apk/res/values-fi-rFI/strings.xml
@@ -6,21 +6,27 @@
   <string name="card_delete_negative_text">Peruuta</string>
   <string name="card_delete_positive_text">Poista</string>
   <string name="card_delete_title">Poista tarina</string>
-  <string name="card_title_annual_selection">Vuosittainen kertaus</string>
-  <string name="card_title_from_to">%1$s - %2$s</string>
-  <string name="card_title_last2years_someone">BFFs</string>
-  <string name="card_title_last_week_end">Viime viikonloppuna</string>
-  <string name="card_title_last_year_today">Tämä päivä viime vuonna</string>
-  <string name="card_title_lastweek_meet">Yhdessä</string>
-  <string name="card_title_one_day">Unohtumaton päivä</string>
-  <string name="card_title_past_year_today">Tämä päivä vuosien varrella</string>
-  <string name="card_title_period_last_month">Viime kuukauden kertaus</string>
-  <string name="card_title_period_last_week">Viime viikon kertaus</string>
-  <string name="card_title_period_six_month">Viime puoli vuotta</string>
-  <string name="card_title_period_three_month">Viime kolme kuukautta</string>
-  <string name="card_title_recent_place">%1$s viimeaikoine</string>
-  <string name="card_title_someone">Ystävyys</string>
-  <string name="empty_title_no_cards">Tarinasi näytetään täällä.</string>
+  <string name="card_description_annual_events">Kallisarvoiset ajat yhdessä</string>
+  <string name="card_description_annual_foods">Ruokapäiväkirja</string>
+  <string name="card_description_annual_pets">Hännät, tassut ja kuonokarvat</string>
+  <string name="card_description_annual_travel">Matkalla huomatut asiat</string>
+  <string name="card_description_from_to">%1$s - %2$s</string>
+  <string name="card_title_activities">Tapahtumat</string>
+  <string name="card_title_annual_events">Juhlani kohteessa %1$s</string>
+  <string name="card_title_annual_foods">Herkullinen %1$s</string>
+  <string name="card_title_annual_pets">Kasvatassut kohteessa %1$s</string>
+  <string name="card_title_annual_travel">Matkani kohteessa %1$s</string>
+  <string name="card_title_last_week_end">Viikonloppuni</string>
+  <string name="card_title_monthly_foods">Herkullinen</string>
+  <string name="card_title_monthly_pets">Kasvatassut</string>
+  <string name="card_title_party">Juhlat</string>
+  <string name="card_title_past_week_end">Viime viikonloput</string>
+  <string name="card_title_pastyear_activities">Viime vuoden tapahtumat</string>
+  <string name="card_title_pastyear_party">Viime vuoden juhlat</string>
+  <string name="card_title_pastyear_sports">Viime vuoden harjoitukset</string>
+  <string name="card_title_recent_memory">Viimeaikaisia muistoja</string>
+  <string name="card_title_sports">Harjoitukset</string>
+  <string name="empty_title_no_cards">AI-tarina-albumit</string>
   <string name="more">Lisää</string>
   <string name="operation_favorites">Suosikit</string>
   <string name="removed_from_favorites_desc">Poistettiin suosikeista</string>
@@ -28,7 +34,15 @@
   <string name="rename_dialog_title">Nimeä tarina uudelleen</string>
   <string name="story_action_remove">Poista tarinoista</string>
   <string name="story_action_share">Jaa</string>
+  <string name="story_back_stop_download">Napauta uudelleen lopettaaksesi lataamisen</string>
+  <string name="story_cancel_download">Peruuta</string>
+  <string name="story_download">Lataa</string>
+  <string name="story_download_failed_for_notwork">Ei voitu ladata. Yhdistä verkkoon ja yritä uudelleen.</string>
+  <string name="story_download_without_wifi_msg">Käyttämällä mobiilidatayhteyttä tiedostojen lataamiseen nostaa datan käyttöäsi. Jos menet datapakettisi rajan yli, operaattorisi saattaa veloittaa sinulta lisämaksuja.</string>
+  <string name="story_download_without_wifi_title">Tiedonsiirtovaroitus</string>
+  <string name="story_option_menu_delete">Poista tarina</string>
   <string name="story_option_menu_rename">Nimeä uudelleen</string>
+  <string name="story_photo_downloading">Ladataan…</string>
   <string name="story_remove_confirm_message">Poistetut kuvat ei näy tässä tarinassa uudelleen. Löydät ne silti Galleriasta.</string>
   <string name="story_remove_confirm_positive">Poista</string>
   <string name="story_remove_confirm_title">Poistetaan kuvia</string>
@@ -822,6 +836,8 @@
   <string name="downloading_title">Ladataan kuvia Mi Pilvestä</string>
   <string name="edit_baby_info">Näytä vauvan tiedot</string>
   <string name="email_picker_title">Lisää jaettu sähköposti</string>
+  <string name="empty_description_conditions">Muista merkitykselliset tarinat</string>
+  <string name="empty_description_no_cards">Muista merkitykselliset tarinat</string>
   <string name="empty_query_text_msg">En tiedä mitä etsiä…</string>
   <string name="empty_recommend_back">Takaisin</string>
   <string name="empty_recommend_face_page_view">Ei enempää suosituksia</string>
@@ -1125,6 +1141,49 @@ mukauttaaksesi Galleriasi"</string>
   <string name="more_face">Lisää henkilöitä jotka näyttävät samalta</string>
   <string name="more_face_album_name">Lisää henkilöitä</string>
   <string name="move_to_other_albums_tip">Mi Pilven synkronointi poistetaan käytöstä jos siirrät tämän albumin muihin albumeihin. Siirretäänkö nyt?</string>
+  <string name="movie_add_disable">Voit valita enintään 20 kuvaa</string>
+  <string name="movie_audio_custom">Paikallinen</string>
+  <string name="movie_audio_default">Muisto</string>
+  <string name="movie_audio_kawaii">Romanttinen</string>
+  <string name="movie_audio_light">Balladi</string>
+  <string name="movie_audio_linear">Rock</string>
+  <string name="movie_audio_none">Ei mitään</string>
+  <string name="movie_audio_soft">Ukulele</string>
+  <string name="movie_audio_sport">Tekno</string>
+  <string name="movie_cancel_download">Peruuta</string>
+  <string name="movie_change_to_long_video">Valitsit yli 5 kuvaa. Vaihdettiin pidempään videoon.</string>
+  <string name="movie_delete_disable">Tarvitset vähintään 3 kuvaa luodaksesi klipin.</string>
+  <string name="movie_download">Lataa</string>
+  <string name="movie_download_failed">Ei voitu ladata</string>
+  <string name="movie_download_failed_for_notwork">Ei voitu ladata. Yhdistä verkkoon ja yritä uudelleen.</string>
+  <string name="movie_download_sdk_without_wifi_msg">Näyttää siltä, että laitteesi ei ole yhdistettynä Wi-Fi-verkkoon. Ladataanko vaadittu liitännäinen (3 Mt) käyttäen mobiilidataa?</string>
+  <string name="movie_download_sdk_without_wifi_title">Lataa käyttäen mobiilidataa</string>
+  <string name="movie_download_without_wifi_msg">Mobiilidatayhteyden käyttäminen tiedostojen lataamiseen lisää datan käyttöäsi. Jos menet datapakettisi rajan yli, operaattorisi saattaa veloittaa sinulta lisämaksuja.</string>
+  <string name="movie_download_without_wifi_title">Tiedonsiirtovaroitus</string>
+  <string name="movie_edit">Muokkaa</string>
+  <string name="movie_item_name">Videoleike</string>
+  <string name="movie_preview_btn">Esikatsele</string>
+  <string name="movie_preview_share_title">Jaa</string>
+  <string name="movie_return">Takaisin</string>
+  <string name="movie_save">Tallenna</string>
+  <string name="movie_save_failed">Ei voitu tallentaa</string>
+  <string name="movie_save_stop_tips">Napauta uudelleen peruuttaaksesi videon tallentamisen</string>
+  <string name="movie_save_successfully">Tallennettiin Luovuuteen</string>
+  <string name="movie_saving">Luodaan videoleikettä…</string>
+  <string name="movie_tab_edit">Muokkaa</string>
+  <string name="movie_tab_music">Musiikki</string>
+  <string name="movie_tab_template">Malli</string>
+  <string name="movie_template_baby">Söpö</string>
+  <string name="movie_template_food">Ruoka</string>
+  <string name="movie_template_new_year">Uusi Vuosi</string>
+  <string name="movie_template_normal">Melodia</string>
+  <string name="movie_template_party">Juhla</string>
+  <string name="movie_template_pet">Tassut</string>
+  <string name="movie_template_selfie">Tuore</string>
+  <string name="movie_template_travel">Matka</string>
+  <string name="movie_template_xmas">Joulu</string>
+  <string name="movie_video_long">Pitkä video</string>
+  <string name="movie_video_short">10 s video</string>
   <string name="must_pick_file">Valitse kuva</string>
   <string name="name_split">, </string>
   <string name="need_to_turn_on_network">Laite ei ole yhteydessä internetiin</string>
@@ -1281,43 +1340,14 @@ mukauttaaksesi Galleriasi"</string>
   <string name="photo_editor_talkback_redo">Tee uudelleen</string>
   <string name="photo_editor_talkback_undo">Kumoa</string>
   <string name="photo_editor_text">Teksti</string>
-  <string name="photo_movie_select_image_range">Videoleikkeet voivat sisältää 3-6 kuvaa</string>
+  <string name="photo_movie_module_finish">Ladattiin Videoleikkeet onnistuneesti</string>
+  <string name="photo_movie_module_loading">Ladataan Videoleikkeitä…</string>
+  <string name="photo_movie_select_image_range">Videoleikkeet voivat sisältää 3-20 kuvaa</string>
   <string name="photo_page_save_uri_image_fail">Galleriaan tallentaminen epäonnistui</string>
   <string name="photo_page_save_uri_image_ok">Kuva tallennettiin Galleriaan</string>
   <string name="photo_print_menu_loading">Ladataan liitännäistä…</string>
-  <string name="photo_print_package_finish">Ladattiin onnistuneesti</string>
-  <string name="photo_print_package_installing">Ladataan liitännäistä…</string>
-  <string name="photomovie_audio_custom">Paikallinen</string>
-  <string name="photomovie_audio_default">Muisto</string>
-  <string name="photomovie_audio_kawaii">Romanttinen</string>
-  <string name="photomovie_audio_light">Balladi</string>
-  <string name="photomovie_audio_linear">Rock</string>
-  <string name="photomovie_audio_none">Ei mitään</string>
-  <string name="photomovie_audio_soft">Ukulele</string>
-  <string name="photomovie_audio_sport">Tekno</string>
-  <string name="photomovie_audio_unsupport">Tätä ääntä ei tueta.</string>
-  <string name="photomovie_cancel_download">Peruuta</string>
-  <string name="photomovie_delete_disable">Tarvitset vähintään 3 kuvaa luodaksesi videoleikkeen.</string>
-  <string name="photomovie_download">Lataa</string>
-  <string name="photomovie_download_failed">Ei voitu ladata</string>
-  <string name="photomovie_download_failed_for_notwork">Ei voitu ladata. Yhdistä verkkoon ja yritä uudelleen.</string>
-  <string name="photomovie_download_without_wifi_msg">Käyttämällä mobiilitiedonsiirtoa tiedostojen lataamiseen nostaa datan käyttöäsi. Jos menet tiedonsiirtorajasi yli, operaattorisi saattaa veloittaa siitä lisämaksuja.</string>
-  <string name="photomovie_download_without_wifi_title">Tiedonsiirtovaroitus</string>
-  <string name="photomovie_item_name">Videoleike</string>
-  <string name="photomovie_return">Takaisin</string>
-  <string name="photomovie_save">Tallenna</string>
-  <string name="photomovie_save_failed">Tallentaminen epäonnistui</string>
-  <string name="photomovie_save_successfully">Tallennettiin onnistuneesti</string>
-  <string name="photomovie_saving">Luodaan videoleikettä…</string>
-  <string name="photomovie_tab_edit">Muokkaa</string>
-  <string name="photomovie_tab_music">Musiikki</string>
-  <string name="photomovie_tab_template">Sapluuna</string>
-  <string name="photomovie_template_default">Hidas</string>
-  <string name="photomovie_template_kawaii">Viehätys</string>
-  <string name="photomovie_template_light">Tuulahdus</string>
-  <string name="photomovie_template_linear">Automatka</string>
-  <string name="photomovie_template_soft">Nuoruus</string>
-  <string name="photomovie_template_sport">Elinvoima</string>
+  <string name="photo_print_package_finish">Ladattiin Tulostus-liitännäinen onnistuneesti</string>
+  <string name="photo_print_package_installing">Ladataan Tulostus-liitännäistä…</string>
   <string name="pick_from_contact">Valitse yhteystiedoista</string>
   <string name="pick_too_many_recipients">Liian monta vastaanottajaa</string>
   <string name="picker_cancel_download">Peruuta lataaminen</string>
