--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -633,7 +633,7 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="open_camera_hint_text">Avaa kamera pyyhkäisemällä vasemmalle</string>
      <string name="open_extreme_power_save_mode_title">Ota Äärimmäinen virransäästö käyttöön</string>
      <string name="open_lock_screen_magazine_hint_text">Pyyhkäise oikealle lisävalintoja varten</string>
-     <string name="open_remote_center_hint_text">Avaa Pikakuvakkeet pyyhkäisemällä oikealle</string>
+     <string name="open_remote_center_hint_text">Avaa Hallintakeskus pyyhkäisemällä oikealle</string>
      <string name="other">Muu</string>
      <string name="overview">Yleiskatsaus</string>
      <string name="phone_hint">Avaa Puhelin -sovellus pyyhkäisemällä kuvakkeesta</string>
