--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -439,8 +439,8 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_video_duration_entry_120">Ei rajaa</string>
   <string name="pref_camera_video_duration_entry_30">30 minuuttia</string>
   <string name="pref_camera_video_duration_entry_mms">30 sekuntia (MMS)</string>
-  <string name="pref_camera_volumekey_function_entry_exposure">Valotus</string>
   <string name="pref_camera_volumekey_function_entry_shutter">Sulkija</string>
+  <string name="pref_camera_volumekey_function_entry_timer">Sulkijan laskenta</string>
   <string name="pref_camera_volumekey_function_entry_volume">Äänenvoimakkuus</string>
   <string name="pref_camera_volumekey_function_entry_zoom">Zoomaa</string>
   <string name="pref_camera_volumekey_function_title">Äänenvoimakkuuspainikkeiden toiminnot</string>
@@ -563,7 +563,6 @@ ja tuo henkilöt esiin."</string>
   <string name="text_ai_scene_selector_text_on">SILUETTI</string>
   <string name="time_lapse_error">Tätä videokokoa ei voi käyttää time-lapse nauhoituksessa</string>
   <string name="title_snap_double_confirm">Vahvista uudelleen</string>
-  <string name="toast_burst_snap_finished_summary">Sarjakuvaus on valmis, kuvia otettiin %1$s</string>
   <string name="toast_burst_snap_forbidden_when_audio_capture_open">Äänitallennuksen aikana Sarjakuvausta ei voi käyttää</string>
   <string name="toast_saving">Tallennetaan kuvia…</string>
   <string name="toast_start_audio_capture">Ota kuva ääntelemällä</string>
